partial delayed linking + tally derived M&U's